--- a/configs/lean/lean_stable.config
+++ b/configs/lean/lean_stable.config
@@ -173,10 +173,10 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Dns2socks=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray-plugin=y
-CONFIG_PACKAGE_luci-app-ikoolproxy=y
-CONFIG_PACKAGE_luci-app-qbittorrent=y
-CONFIG_PACKAGE_luci-app-qbittorrent_static=y
-CONFIG_PACKAGE_luci-app-samba=y
+#CONFIG_PACKAGE_luci-app-ikoolproxy=y
+#CONFIG_PACKAGE_luci-app-qbittorrent=y
+#CONFIG_PACKAGE_luci-app-qbittorrent_static=y
+#CONFIG_PACKAGE_luci-app-samba=y
 # CONFIG_PACKAGE_luci-app-sfe=y
 CONFIG_PACKAGE_luci-app-turboacc=y
 CONFIG_PACKAGE_TURBOACC_INCLUDE_BBR_CCA=y
